<resources>
    <string name="app_name">CommunityApp</string>
    <string name="openDrawer">Open Navigation Drawer</string>
    <string name="closeDrawer">Close Navigation Drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="learn_by_making_solid_connection">Learn by making solid connection</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="survey_form">Survey Form</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_age_optional">Enter your age (Optional)</string>
    <string name="would_you_recommend_gpa_connect_to_a_friend">Would you recommend GPA connect to a friend?</string>
    <string name="definitely">Definitely</string>
    <string name="may_be">May be</string>
    <string name="not_sure">Not sure</string>
    <string name="what_is_your_favourite_feature_of_gpa_connect">What is your favourite feature of GPA connect?</string>
    <string name="what_would_you_like_to_see_improved">What would you like to see improved?</string>
    <string name="write_post">Write Post</string>
    <string name="choose_department">Choose Department</string>
    <string name="write_a_post">Write a Post</string>
    <string name="automobile_department">Automobile Department</string>
    <string name="civil_department">Civil Department</string>
    <string name="computer_department">Computer Department</string>
    <string name="electrical_department">Electrical Department</string>
    <string name="electronics_department">Electronics Department</string>
    <string name="information_tech_department">Information Tech. Department</string>
    <string name="mechanical_department">Mechanical Department</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_password">Create password</string>
    <string name="header">Header</string>
    <string name="codiz_01">CODIZ_01</string>
    <string name="name">Name</string>
    <string name="they_like">They like</string>
    <string name="this_must_be_improved">This must be improved</string>
    <string name="other_comments">Other Comments</string>
    <string name="reply">Reply</string>
    <string name="head">Head</string>
    <string name="view_link">View link</string>
    <string name="delete_link">Delete link</string>
    <string name="un_report_link">Un-report link</string>
    <string name="recent_posts">Recent Posts</string>
    <string name="enter_your_header">Enter your header</string>
    <string name="enter_tags">Enter tags</string>
    <string name="submit">Submit</string>
    <string name="ask_questions">Ask questions</string>
    <string name="speed">Speed</string>
    <string name="design">Design</string>
    <string name="dummy">dummy</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="sign_in">Sign In</string>
    <string name="hello_world">Hello World</string>
    <string name="suggestions">Suggestions</string>
    <string name="report_bug">Report Bug</string>
    <string name="authorized">Authorized</string>
    <string name="new_to_codiz">New to Codiz?</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_user">Already Registered?</string>
    <string name="forget">Forget?</string>
    <string name="your_post">Your Post</string>
    <string name="logout">Logout</string>
    <string name="automobile">Automobile</string>
    <string name="mechanical">Mechanical</string>
    <string name="civil">Civil</string>
    <string name="information_tech">Information Tech</string>
    <string name="electrical">Electrical</string>
    <string name="electronics">Electronics</string>
    <string name="computer">Computer</string>
    <string name="home">Home</string>
    <string name="verify_email_msg">Please verify email sent on your email !!! and click verify button</string>
    <string name="my_account">My Account</string>
</resources>