<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.SuggestionsFragment">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/cell_shape"
                android:gravity="start"
                android:padding="7dp"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/cell_shape"
                android:gravity="start"
                android:padding="7dp"
                android:text="@string/they_like"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:background="@drawable/cell_shape"
                android:gravity="start"
                android:padding="7dp"
                android:text="@string/this_must_be_improved"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@drawable/cell_shape"
                android:gravity="start"
                android:padding="7dp"
                android:text="@string/other_comments"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/cell_shape"
                android:gravity="start"
                android:padding="7dp"
                android:text="@string/reply"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </TableRow>

    </TableLayout>

</HorizontalScrollView>